--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,7 +85,7 @@
         android:text="3" />
 
     <Button
-        android:id="@+id/btnCLEAR"
+        android:id="@+id/btnClear"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -102,12 +102,12 @@
         android:text="0" />
 
     <Button
-        android:id="@+id/btn="
+        android:id="@+id/btnEqual"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/btn9"
         android:layout_marginLeft="203dp"
-        android:layout_marginTop="493dp"
+        android:layout_marginTop="2dp"
         android:text="=" />
 
     <Button
